@startuml persistencelayer
package persistence_layer {
    class Usuario {
        -id_usuario:String
        -nome:String
        -email:String
        -senha:String

        +getNome():String
        +getEmail():String
        +getSenha():String
        +setNome(nome:String):boolean
        +setEmail(email:String):boolean
    }

    class FichaDeTreinamento {
        -id_ficha:String
        -frequencia:String
        -avalicacaoPosTreinamento:String
        -gruposMusculares:[String]

        +getFrequencia():String
        +getAvalicacaoPosTreinamento():String
        +getGruposMusculares():[String]
        +setFrequencia(frequencia:String):boolean
        +setAvalicacaoPosTreinamento(avalicacaoPosTreinamento:String):boolean
        +setGruposMusculares(gruposMusculares:[String]):boolean
    }

    class Exercicio {
        -id_exercicio:String
        -nome:String
        -cargas:[JSON]
        -avaliacoes:[JSON]
        -data_de_inicio:Date
        -data_de_termino:Date

        +getNome():String
        +getIdExercicio():int
        +getDataDeInicio():Date
        +getDataDeTermino():Date
        +getCargas():[JSON]
        +getAvaliacoes():[JSON]
        +setNome(nome:String):boolean
        +setDataDeInicio(dataDeInicio:Date):boolean
        +setDataDeTermino(dataDeTermino:Date):boolean
        +setCargas(cargas:[JSON]):boolean
        +setAvaliacoes(avaliacoes:[JSON]):boolean
    }

    
    Exercicio "N" *-- "1" FichaDeTreinamento
    Usuario "1" *-- "1" FichaDeTreinamento
}
@enduml